--- a/javascriptoperator.html
+++ b/javascriptoperator.html
@@ -13,12 +13,62 @@
     <div>There are following types of Operators as follows:
         <ul>
             <li>Arithmetic: +,-,*,/,%,++,--</li>
-            <li>Comparison: ==, !=,===,!==,<,><=,>=</li>
+            <li>Comparison: ==, !=,===,!==,<,>
+                    <=,>=</li>
             <li>Logical:&&,||, !</li>
             <li>bitiwse:&,|,~,^</li>
             <li>Assignment:=</li>
             <li>Miscellanous Operator:Conditional,??,spread, yeild</li>
         </ul>
+    </div>
+    <div>
+        <h2> Nullish Coalescing Operator</h2>
+        <div>It is used to handle null or undefined value. it takes two operands if first is null or undefined then
+            second is called.</div>
+
+    </div>
+    <div>
+        <h2> safe assignment Operator</h2>
+        <div>It is used to assign a defualt value when null or defined ex: x?='Asif'</div>
+
+    </div>
+
+    <div>
+        <h2>Delete Operator</h2>
+        <div>Delete operator is used to delete or remove an object. It only works with object not with variables or
+            functions. it removes property key and value bothex delete obj.Name<br/>It is will return ifthe data is removed and if it does not exist then also true</div>
+    </div>
+
+    <div>
+        <h2>Grouping Operator</h2>
+        <div>Grouping operator is used to group certain operation. ex: 5+6*10 we can group this as (5+6)*10</div>
+    </div>
+
+    <div>
+        <h2>Yield Operator</h2>
+        <div>Yeild operator is used to pause and resume the generator function. in simple words use next() method to run the function by resume it.
+            ex: function* test()
+            {
+                yield 10;
+                yield 30;
+            }
+
+            const t=test();
+            t.next();
+        </div>
+    </div>
+
+    <div>
+        <h2>Spread Operator</h2>
+        <div> Spread Operator is used to clone or copy array elements, it is iteratble array and represented with <div class="dots">
+
+            ex:let a={"asif"}; let b{"sorathiya",...a};
+        </div></div>
+    </div>
+
+    <div><h3>Exponential Operator</h3>
+        <div>It is used to do exponentiation menas if use 2**3 it means 2*2*2 will be called or executed.</div>
+    
     </div>
 </body>
 
