--- a/javascriptoperator.html
+++ b/javascriptoperator.html
@@ -36,7 +36,8 @@
     <div>
         <h2>Delete Operator</h2>
         <div>Delete operator is used to delete or remove an object. It only works with object not with variables or
-            functions. it removes property key and value bothex delete obj.Name<br/>It is will return ifthe data is removed and if it does not exist then also true</div>
+            functions. it removes property key and value bothex delete obj.Name<br />It is will return ifthe data is
+            removed and if it does not exist then also true</div>
     </div>
 
     <div>
@@ -46,11 +47,12 @@
 
     <div>
         <h2>Yield Operator</h2>
-        <div>Yeild operator is used to pause and resume the generator function. in simple words use next() method to run the function by resume it.
+        <div>Yeild operator is used to pause and resume the generator function. in simple words use next() method to run
+            the function by resume it.
             ex: function* test()
             {
-                yield 10;
-                yield 30;
+            yield 10;
+            yield 30;
             }
 
             const t=test();
@@ -60,15 +62,18 @@
 
     <div>
         <h2>Spread Operator</h2>
-        <div> Spread Operator is used to clone or copy array elements, it is iteratble array and represented with <div class="dots">
+        <div> Spread Operator is used to clone or copy array elements, it is iteratble array and represented with <div
+                class="dots">
 
-            ex:let a={"asif"}; let b{"sorathiya",...a};
-        </div></div>
+                ex:let a={"asif"}; let b{"sorathiya",...a};
+            </div>
+        </div>
     </div>
 
-    <div><h3>Exponential Operator</h3>
+    <div>
+        <h3>Exponential Operator</h3>
         <div>It is used to do exponentiation menas if use 2**3 it means 2*2*2 will be called or executed.</div>
-    
+
     </div>
 </body>
 
