--- a/pages/helloworld.html
+++ b/pages/helloworld.html
@@ -28,7 +28,7 @@
         <li>variables must not start with number,it can start with _,$ & alphabets</li>
     </ul>
 
-    <script src="scriptfolder/helloworld.js"></script>
+    <script src="../scriptfolder/helloworld.js"></script>
 </body>
 
 </html>
